--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1342,7 +1342,6 @@ footer p span {
 }
 
 .projects-btn:hover {
-  box-shadow: rgba(255, 255, 255, 0.23) 0px 0px 3px inset, rgba(255, 255, 255, 0.16) 0px 0px 3px inset;
   transition: all 0.3s ease;
   color: var(--clr-primary);
   background-color: var(--clr-dark);
@@ -1468,7 +1467,7 @@ footer p span {
 .projects-btn.active,
 .projects-btn:active {
   background-color: var(--clr-secondary);
-  color: var(--clr-accent);
+  color: var(--clr-primary);
 }
 
 .projects-container:after,
