--- a/resources/scss/home/home.scss
+++ b/resources/scss/home/home.scss
@@ -1162,8 +1162,6 @@ footer p span {
     border: none;
 }
 .projects-btn:hover {
-    box-shadow: rgba(255, 255, 255, 0.23) 0px 0px 3px inset,
-        rgba(255, 255, 255, 0.16) 0px 0px 3px inset;
     transition: all 0.3s ease;
     color: var(--clr-primary);
     background-color: var(--clr-dark);
@@ -1291,7 +1289,7 @@ footer p span {
 .projects-btn.active,
 .projects-btn:active {
     background-color: var(--clr-secondary);
-    color: var(--clr-accent);
+    color: var(--clr-primary);
 }
 // .secondary-btn:focus.active {
 //     box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.3),
