--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1199,7 +1199,7 @@ footer p span {
   height: 370px;
   background: var(--clr-primary);
   margin: 0 auto;
-  border-radius: 4px;
+  border-radius: 1.3rem;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
   border-radius: 1.3rem;
   overflow: hidden;
@@ -1213,7 +1213,7 @@ footer p span {
   left: 0;
   width: 100%;
   height: 100%;
-  border-radius: 4px;
+  border-radius: 1.3rem;
   background: #fff;
   transition: all linear 0.3s;
   z-index: -1;
@@ -1265,25 +1265,34 @@ footer p span {
   -o-object-fit: cover;
      object-fit: cover;
   transition: 1s;
-  border-radius: 0.3rem;
+  border-radius: 1rem;
 }
 
 .card .details {
   position: absolute;
   left: 10px;
-  right: 10px;
+  right: 55px;
   bottom: 10px;
   height: 80px;
-  text-align: center;
 }
 
-.card .details h2 {
+.card i {
+  font-size: 2.5rem;
+  color: var(--clr-dark);
+  border-bottom: 3px solid var(--clr-dark);
+  margin-top: 1rem;
+}
+
+.card i:hover {
+  color: var(--clr-secondary);
+  border-color: var(--clr-accent);
+}
+
+.card .details h5 {
   margin: 0;
   padding: 0;
-  font-weight: 600;
-  font-size: 20px;
-  color: #3a3737;
-  text-transform: uppercase;
+  font-size: 1.5rem;
+  color: var(--clr-secondary);
 }
 
 .custom-height {
@@ -2229,6 +2238,10 @@ body {
   .icon-pic img,
 .digital-marketing-pic img {
     margin: 2.5rem auto 1rem auto;
+  }
+
+  .aboutUs-custom-hr2 {
+    width: 100% !important;
   }
 }
 /* Tablet Screen -----------------------------------------------*/
