--- a/resources/scss/home/home.scss
+++ b/resources/scss/home/home.scss
@@ -1193,9 +1193,9 @@ footer p span {
          position: relative;
          padding-top: 50px;
          min-height: 820px;
-         max-width: 810px;
+         width: 100%;
          margin: 0 auto;
-         background: #fff;
+         background: #f6f6f6;
          z-index: 1;
     }
      .multi_step_form #msform .tittle {
